--- a/package.json
+++ b/package.json
@@ -1,26 +1,60 @@
 {
   "name": "aws-utilities",
-  "version": "1.0.0",
-  "description": "Several AWS utilities to make life easier",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "CLI tool with several utilities for helping usage with AWS",
+  "version": "0.0.1",
+  "author": "Kevin Rueter <k.rueter93@gmail.com>",
+  "bin": {
+    "aws-utils": "./bin/run"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kerueter/aws-utilities.git"
+  "bugs": "https://github.com/kerueter/https://github.com/kerueter/aws-utilities/issues",
+  "engines": {
+    "node": ">=8.0.0"
   },
+  "files": [
+    "/bin",
+    "/lib",
+    "/npm-shrinkwrap.json",
+    "/oclif.manifest.json"
+  ],
+  "homepage": "https://github.com/kerueter/aws-utilities#readme",
   "keywords": [
+    "oclif",
     "aws",
     "utilities"
   ],
-  "author": "Kevin Rueter <k.rueter93@gmail.com>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/kerueter/aws-utilities/issues"
+  "main": "lib/index.js",
+  "oclif": {
+    "commands": "./lib/commands",
+    "bin": "aws-utils",
+    "plugins": [
+      "@oclif/plugin-help"
+    ]
   },
-  "homepage": "https://github.com/kerueter/aws-utilities#readme",
+  "repository": "https://github.com/kerueter/aws-utilities",
+  "scripts": {
+    "postpack": "rm -f oclif.manifest.json",
+    "posttest": "eslint . --ext .ts --config .eslintrc",
+    "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
+    "test": "echo NO TESTS",
+    "version": "oclif-dev readme && git add README.md"
+  },
+  "types": "lib/index.d.ts",
   "dependencies": {
-    "aws-sdk": "^2.834.0"
+    "@oclif/command": "^1.8.0",
+    "@oclif/config": "^1.17.0",
+    "@oclif/plugin-help": "^3.2.1",
+    "aws-sdk": "^2.835.0",
+    "tslib": "^1.14.1"
+  },
+  "devDependencies": {
+    "@oclif/dev-cli": "^1.26.0",
+    "@types/node": "^10.17.51",
+    "eslint": "^5.16.0",
+    "eslint-config-oclif": "^3.1.0",
+    "eslint-config-oclif-typescript": "^0.1.0",
+    "globby": "^10.0.2",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   }
 }
