--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/plugin-help": "^3.2.1",
+    "amazon-cognito-identity-js": "^4.5.10",
     "aws-sdk": "^2.835.0",
+    "axios": "^0.21.1",
+    "https": "^1.0.0",
     "tslib": "^1.14.1"
   },
   "devDependencies": {
